# rust-pretext

./: Cargo.toml  demo.cjs
.github/workflows/: ci.yml
src/: bidi.rs  layout.rs  lib.rs  segmentation.rs
tests/: fuzz_test.rs  integration.rs
