[package]
name = "pretext-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
unicode-segmentation = "1.11.0"
unicode-bidi = "0.3.15"
rustybuzz = "0.12.1"

[dev-dependencies]
rand = "0.8.5"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
